fix align

--- a/Module69/pokedex/src/Components/Search/Search.css
+++ b/Module69/pokedex/src/Components/Search/Search.css
@@ -2,7 +2,9 @@
     margin: 0 auto;
 }
 #pokename-name-search{
-    margin-top: 2rem;
+    margin: 0 20rem;
+    margin-top: 1rem;
     padding: 1.5rem;
     width: 600px;
+    text-align: center;
 }
